Fix image sizing to prevent line break from being cut short

--- a/webstyle.css
+++ b/webstyle.css
@@ -363,7 +363,7 @@ cite {
 
 @media(min-width:1400px) {
   .float-section img {
-    max-height: 200px;
+    height: 180px;
     margin: 0% 0% 2% 4%;
   }
 }
